Compilador_Final/tests/invalid/test_e01_drone_no_declarado.drone
// Test con error 1: drone no declarado (error semántico)
zona base(0, 0);

mision error_undeclared {
    despegar fantasma;
    mover fantasma arriba 10;
    aterrizar fantasma;
}
